--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "styled-components": "^4.1.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
